# AlphaPhase

./: .gitignore  .gitmodules  AlphaPhase.f90  CMakeLists.txt  Clustering.f90  Compile.sh  Constants.f90  CoreDefinition.f90  CoreSubsetDefinition.f90  DataSubset.f90  HaplotypeLibrary.f90  HaplotypeLibraryDefinition.f90  HaplotypeLibraryPhasing.f90  InputOutput.f90  LongRangePhasing.f90  MemberManagerDefinition.f90  NRMcode.f90  Parameters.f90  ParametersDefinition.f90  PedigreeDefinition.f90  PedigreeDefintion.f90  Phasing.f90  README.md  Random.f90  Sorting.f90  SurrogateDefinition.f90  TestResultDefinition.f90  Testing.f90  alphaphase.py  distclean.cmake  make_zip_file.sh  makefile
cmake/modules/: FindOpenMP_Fortran.cmake  SetFortranFlags.cmake  SetParallelizationLibrary.cmake  findHDF5.cmake  findMKL.cmake  findPFUnit.cmake  setCompileFlags.cmake
example/: AlphaPhaseSpec.txt  Genotypes.txt  Pedigree.txt
src/: AlphaPhase.f90  AlphaPhaseFunctions.f90  AlphaPhaseParametersModule.f90  AlphaPhaseResultsDefinition.f90  AlphaPhaseResultsModule.f90  CMakeLists.txt  ChipsDefinition.f90  Clustering.f90  CoreDefinition.f90  CoreModule.f90  CoreSubsetDefinition.f90  CoreSubsetModule.f90  CoreUtils.f90  HaplotypeLibraryDefinition.f90  HaplotypeLibraryModule.f90  HaplotypeLibraryPhasing.f90  InputOutput.f90  LongRangePhasing.f90  MemberManagerDefinition.f90  MemberManagerModule.f90  NRMcode.f90  OutputParametersDefinition.f90  OutputParametersModule.f90  ParametersDefinition.f90  PedigreeDefinition.f90  ProgramParametersDefinition.f90  ProgramParametersModule.f90  Random.f90  Sorting.f90  SurrogateDefinition.f90  SurrogateModule.f90  TestResultDefinition.f90  TestResultModule.f90
